--- a/Resources/views/Default/menu.html.twig
+++ b/Resources/views/Default/menu.html.twig
@@ -6,6 +6,13 @@
     {% else %}
         {% set selected = '' %}
     {% endif %}
-    <li class="{% if type == 'Category' %}level_{{ c.lvl }}{% endif %}{{ selected }}"><div class="selector{{selected}}"><a href="{{ path }}"><div class="selector-icon"></div><span class="text">{{ c.name }}</span></a></div></li>
+    <li class="{% if type == 'Category' %}level_{{ c.lvl }}{% endif %}{{ selected }}">
+        <div class="selector{{selected}}">
+            <a href="{{ path }}">
+                <div class="selector-icon"></div>
+                <span class="text">{{ c.name }}</span>
+            </a>
+        </div>
+    </li>
 {% endfor %}
 </ul>
