--- a/Resources/views/Default/sidebar.html.twig
+++ b/Resources/views/Default/sidebar.html.twig
@@ -1,8 +1,3 @@
-{# Toggle sidebar inactive:
-<div class="bar pull-right">
-    <a href="javascript:void(0)" class="toggle" title="Clique aqui para exibir/ocultar a barra lateral"><div class="">&nbsp;</div></a>
-</div>
-#}
 {% macro Topic(name) %}
         <h3 class="topic">
             <div id="lhn-recommendations-minimize" class="section-button section-minimize"></div>
@@ -11,9 +6,8 @@
 {% endmacro %}
 <div class="content">
     <h2 class=""><a href="{{ path('GpupoCamelSpiderReaderBundle_homepage') }}">Notícias</a></h2>
-
+{% if 'GpupoCamelSpiderReaderBundle' in app.request.attributes.get('_route') %}
     <div class="nav nav-news accordion ui-accordion ui-accordion-icons">
-
         {{ _self.Topic('Categorias') }}
         <div class="container">
         {% render "GpupoCamelSpiderReaderBundle:Default:getMenu" with {'type': 'Category', 'node': node | default(null), 'folderType': folderType | default(null)} %}</div>
@@ -35,4 +29,5 @@
 #}
 
     </div>
+{% endif %}
 </div>
