Send mail with source

--- a/Resources/views/Default/send.html.twig
+++ b/Resources/views/Default/send.html.twig
@@ -3,7 +3,9 @@
 
 
 {% block content %}
-<form action="{{ path('GpupoCamelSpiderReaderBundle_send_submit') }}" method="post" class="send box pull-center">
+<form 
+    action="{{ path('GpupoCamelSpiderReaderBundle_send_submit') }}"
+    method="post" class="send box pull-center">
 
          <div class="pull-right">
             <input type="submit" value="Enviar" class="margin-2 button"/>
